--- a/package.json
+++ b/package.json
@@ -38,5 +38,6 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.9.0",
     "react-test-renderer": "^16.9.0"
-  }
+  },
+  "keywords": ["react", "hooks", "react-hooks", "custom-hooks", "input"]
 }
