--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "test": "jest test --coverage",
+    "test": "NODE_ENV=jest jest test --coverage",
     "build": "rm -rf ./dist && NODE_ENV=production babel src --out-dir dist",
     "prepublishOnly": "yarn build && cp -r ./dist/* . && rm -rf ./dist",
     "postpublish": "git clean -fd"
